<resources>
    <string name="app_name">Madar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="job_title">Job Title</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save">Save</string>
    <string name="add_user">Add User</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_valid_age_1_120">Please enter valid age (1-120)</string>
    <string name="please_enter_job_title">Please enter job title</string>
    <string name="please_select_gender">Please select gender</string>
</resources>